--- a/Badges.org
+++ b/Badges.org
@@ -207,7 +207,12 @@ https://www.tandfonline.com/doi/full/10.1080/00031305.2017.1375989
    :State: Draft
    :END:
 ** TT000X - Python beginner 
-   
+
+*** Reading recommendations
+
+http://swcarpentry.github.io/python-novice-inflammation/
+http://swcarpentry.github.io/python-novice-gapminder/
+
 - [ ] scripts, REPL (python and ipython), Jupyter notebook
 - [ ] variables
 - [ ] literal
